# src/servers-integration-webapi/Interfaces/IRconClient.cs
@@ -1,4 +1,5 @@
 ﻿using XtremeIdiots.Portal.RepositoryApi.Abstractions.Constants;
+using XtremeIdiots.Portal.ServersWebApi.Models;
 
 namespace XtremeIdiots.Portal.ServersWebApi.Interfaces
 {
@@ -7,6 +8,7 @@ namespace XtremeIdiots.Portal.ServersWebApi.Interfaces
         void Configure(GameType gameType, Guid gameServerId, string hostname, int queryPort, string rconPassword);
         List<IRconPlayer> GetPlayers();
         Task Say(string message);
+        Task<List<Quake3QueryMap>> GetMaps();
         Task<string> Restart();
         Task<string> RestartMap();
         Task<string> FastRestartMap();
