# src/servers-integration-webapi/Models/Quake3QueryMap.cs
@@ -1,0 +1,8 @@
+namespace XtremeIdiots.Portal.ServersWebApi.Models
+{
+    public class Quake3QueryMap
+    {
+        public string GameType { get; set; }
+        public string MapName { get; set; }
+    }
+}
